# signal

./: .gitignore  README.md
.claude/: launch.json
analyser/: .env.example  Makefile  README.md  analyser.py  pyproject.toml
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  config.yaml  pyproject.toml  requirements-kite.txt  requirements.txt
backend/data/: replay_sample.csv
backend/deploy/: Caddyfile  docker-compose.yml  inventory.ini  playbook.yml  redeploy.yml
backend/migrations/: env.py
backend/migrations/versions/: add_strategy_id_columns.py  fb41ee0c358d_initial_schema.py
backend/src/stock_strategy/: __init__.py  access_token.py  alerts.py  config.py  db.py  engine.py  events.py  instruments.py  kite_client.py  logging_setup.py  main.py  models.py  models_db.py  oi_aggregator.py  replay.py  run_manager.py  template_d_cases.py  timeframes.py
backend/src/stock_strategy/api/: __init__.py  auth.py  core.py  kite.py  runs.py  signals.py
backend/src/stock_strategy/strategy/: __init__.py  base.py  oi_momentum.py  pcr_shift.py  registry.py  template_d.py
backend/tests/: test_api.py  test_instruments.py  test_kite_client.py  test_oi_aggregator.py  test_replay.py  test_template_d.py  test_timeframes.py
frontend/: .env.example  biome.json  package-lock.json  package.json
frontend/drizzle/: 0000_tiny_bushwacker.sql
frontend/public/: manifest.json
spec/: 01-product-overview.md  02-authentication-flow.md  03-signal-pipeline.md  04-frontend-dashboard.md  05-api-reference.md  06-database-schema.md  07-run-lifecycle.md
(+56 files in other folders)
