[project]
name = "stock-strategy"
version = "0.1.0"
description = "Live OI signal engine for NIFTY/BANKNIFTY/SENSEX using Kite data"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Stock Strategy" }]
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "kiteconnect>=5.0.0",
    "loguru>=0.7.2",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "sse-starlette>=3.3.2",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
kite = ["kiteconnect>=5.0.0"]

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["alembic>=1.15.0", "ruff>=0.11.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/stock_strategy"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008", "B023", "SIM102", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["stock_strategy"]
